# FindTheObject

./: CMakeLists.txt  README.md  README_PROJECT.txt  main.cpp  scriptToPlot.py
Data/: chi_stats.txt  matchingPointsGlobe.txt  matchingPointsScene.txt
Parser/: Parser.cpp  Parser.h
Tools/: distanceMap.cpp  distanceMap.h  evalRansac.cpp  evalRansac.h  icpEvaluator.cpp  icpEvaluator.h  randomGrabber.cpp  randomGrabber.h
